--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 	<property name="srcBeast2" location="${beast2path}/src" />
 	<property name="beast2classpath" location="${beast2path}/build" />
 	<property name="Add_on_dir" value="${release_dir}/add-on" />
-	<property name="version" value="0.0.1" />
+	<property name="version" value="0.0.2" />
 
     <import file="${beast2path}/build.xml" />
 
@@ -34,6 +34,7 @@
 		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
 		<fileset dir="${libBeast2}" includes="jam.jar"/>
         <pathelement path="${beast2classpath}"/>
+		<fileset dir="/opt/java/jre/lib/" includes="jfxrt.jar"/>
 	</path>
 
 	<!-- start -->
@@ -85,8 +86,8 @@
 		       fork="true"
 		       memoryinitialsize="256m"
 		       memorymaximumsize="256m"
-			   source="1.6"
-		       target="1.6">
+			   source="1.7"
+		       target="1.7">
 			<include name="**/**" />
 		</javac>
 		<echo message="Successfully compiled." />
@@ -128,6 +129,7 @@
 			</manifest>
 			<fileset dir="${buildBEASTShell}">
 				<include name="**/*" />
+				<exclude name="dist/*" />
 			</fileset>
 		</jar>
 	</target>
@@ -181,6 +183,7 @@
 		<mkdir dir="${Add_on_dir}/lib" />
 		<mkdir dir="${Add_on_dir}/examples" />
 		<mkdir dir="${Add_on_dir}/doc" />
+		<mkdir dir="${Add_on_dir}/doc/html" />
 
 		<copy todir="${Add_on_dir}">
 			<fileset file="version.xml"/>
@@ -200,8 +203,8 @@
 		<copy todir="${Add_on_dir}">
 			<fileset dir="${distBEASTShell}" includes="BEASTShell.src.jar" />
 		</copy>
-		<copy todir="${Add_on_dir}/doc">
-			<fileset dir="doc" />
+		<copy todir="${Add_on_dir}/doc/html">
+			<fileset dir="doc/html"/>
 		</copy>
 
 		<jar jarfile="${distBEASTShell}/BEASTShell.addon.v${version}.zip">
