--- a/build.xml
+++ b/build.xml
@@ -13,12 +13,12 @@
 	<property name="libBEASTShell" location="lib" />
 	<property name="release_dir" value="release" />
 	<property name="distBEASTShell" location="${buildBEASTShell}/dist" />
-	<property name="beast2path" location="../beast2" />
+	<property name="beast2path" location="../beast2.1.3" />
 	<property name="libBeast2" location="${beast2path}/lib" />
 	<property name="srcBeast2" location="${beast2path}/src" />
 	<property name="beast2classpath" location="${beast2path}/build" />
 	<property name="Add_on_dir" value="${release_dir}/add-on" />
-	<property name="version" value="0.0.3" />
+	<property name="version" value="1.0.0" />
 
     <import file="${beast2path}/build.xml" />
 
@@ -31,6 +31,7 @@
 		<fileset dir="${libBEASTShell}" includes="rsyntaxtextarea.jar"/>
 		<fileset dir="${libBEASTShell}" includes="xchart-2.3.3-SNAPSHOT.jar"/>
 		<fileset dir="${libBEASTShell}" includes="itextpdf-5.2.1.jar"/>
+		<fileset dir="${libBEASTShell}" includes="jtikz.jar"/>
 		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
 		<fileset dir="${libBeast2}" includes="jam.jar"/>
         <pathelement path="${beast2classpath}"/>
@@ -199,6 +200,7 @@
     		<fileset dir="${libBEASTShell}" includes="rsyntaxtextarea.jar"/>
     		<fileset dir="${libBEASTShell}" includes="xchart-2.3.3-SNAPSHOT.jar"/>
     		<fileset dir="${libBEASTShell}" includes="itextpdf-5.2.1.jar"/>
+    		<fileset dir="${libBEASTShell}" includes="jtikz.jar"/>
 		</copy>
 		<copy todir="${Add_on_dir}">
 			<fileset dir="${distBEASTShell}" includes="BEASTShell.src.jar" />
