--- a/build.xml
+++ b/build.xml
@@ -13,12 +13,12 @@
 	<property name="libBEASTShell" location="lib" />
 	<property name="release_dir" value="release" />
 	<property name="distBEASTShell" location="${buildBEASTShell}/dist" />
-	<property name="beast2path" location="../beast2.1.3" />
+	<property name="beast2path" location="../beast2" />
 	<property name="libBeast2" location="${beast2path}/lib" />
 	<property name="srcBeast2" location="${beast2path}/src" />
 	<property name="beast2classpath" location="${beast2path}/build" />
 	<property name="Add_on_dir" value="${release_dir}/add-on" />
-	<property name="version" value="1.0.1" />
+	<property name="version" value="1.1.0" />
 
     <import file="${beast2path}/build.xml" />
 
@@ -26,7 +26,7 @@
 	<property name="report" value="${buildBEASTShell}/junitreport"/>
 
 	<path id="classpath">
-        <pathelement path="${buildBEASTShell}"/>
+	        <pathelement path="${buildBEASTShell}"/>
 		<fileset dir="${libBEASTShell}" includes="autocomplete.jar"/>
 		<fileset dir="${libBEASTShell}" includes="rsyntaxtextarea.jar"/>
 		<fileset dir="${libBEASTShell}" includes="xchart-2.3.3-SNAPSHOT.jar"/>
@@ -34,8 +34,8 @@
 		<fileset dir="${libBEASTShell}" includes="jtikz.jar"/>
 		<fileset dir="${libBeast2}" includes="junit-4.8.2.jar"/>
 		<fileset dir="${libBeast2}" includes="jam.jar"/>
-        <pathelement path="${beast2classpath}"/>
-		<fileset dir="/opt/java/jre/lib/" includes="jfxrt.jar"/>
+		<pathelement path="${beast2classpath}"/>
+		<!--fileset dir="/opt/java/jre/lib/" includes="jfxrt.jar"/-->
 	</path>
 
 	<!-- start -->
@@ -87,8 +87,8 @@
 		       fork="true"
 		       memoryinitialsize="256m"
 		       memorymaximumsize="256m"
-			   source="1.7"
-		       target="1.7">
+			   source="1.8"
+		       target="1.8">
 			<include name="**/**" />
 		</javac>
 		<echo message="Successfully compiled." />
